data/Java/09-use-undeclared-variable/3/[M]Error.txt
*http://www.runoob.com/java/java-object-classes.html
Test.java:11: error: cannot find symbol
        color = new String();
        ^